Validations to registration form.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,6 @@
-<div class="container-fluid px-0">
+<%
+=begin%>
+ <div class="container-fluid px-0">
   <%= render 'home/carrousel' %>
 </div>
 
@@ -16,4 +18,6 @@
     <div class="container">
       <%= render 'home/mosaic', class:'' %>
     </div>
-</div>
+</div> 
+<%
+=end%>
