--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,10 @@
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
-
         <div class="form-inputs">
+          <%= f.input :username,
+                      autofocus: true,
+                      input_html: { autocomplete: "username" } %>
           <%= f.input :email,
                       required: true,
                       autofocus: true,
