--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,68 +1,12 @@
-<div class="container bg-white mb-5 ">
-  <div class="row">
-    <div class="col-4 pl-5 pt-3">
-      <%= image_tag(@post.image, class:'img-fluid') if @post.image %>
-      <div class="row">
-        <div class="col-12 ml-4 pl-4 pt-2">
-          <h4 class="bold">
-            Rating of:             
-            <%= @post.rating %>
-          </h4>
-        </div>
-        <div class="col-12">
-          <h5 class="d-flex mx-1">
-            <div id="like-count" class="col-6">
-              <%= render 'posts/likes', post: @post %>
-            </div>
-            <div id="like-link" class="col-6">
-              <%= render 'posts/like_link', post: @post %>
-            </div>
-          </h5>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-12">
-        <h6>
-          This Post Belongs to
-          <%= pluralize(@post.categories.count, "Category") %>
-        </h6>
-      </div>
-      <% @post.categories.each do |category| %>
-      <div class="col-6">
-          <%= link_to category.name, posts_path(category: category.name) %>
-      </div>
-      <% end %>
-        <div class="col-12">
-
-        <div class="btn-group my-3">
-          <%= link_to "Back", posts_path, class: 'btn btn-primary mx-1 rounded' %>
-          <% if can? :edit, @post %>
-            <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-warning mx-1 rounded' %>
-            <%= link_to "Delete", @post, method: :delete, data: {confirm: "Are you sure that you want to delete this Post?"}, class: 'btn btn-danger mx-1 rounded' %>
-          <% end %>
-        </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-8">
-      <div class="container">
-        <div class="container py-5">
-          <h1 class="text-center pb-3">
-            <% if params[:category].nil? %>
-              <%= link_to @post.title, posts_path, class: ' text-center' %>
-            <% else %>
-              <%= link_to @post.title, posts_path(category: params[:category], order: params[:order]) %>
-            <% end %>
-          </h1>
-          <div class="container">
-            <div class="container mx-auto">
-              <%= @post.review %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<h2>
+  <%= @post.title %>
+</h2>
+<div>
+    <%= image_tag(@post.image, height: '280', width: '580', class: 'mx-auto d-block') %>
 </div>
-
+<p class="mx-auto mt-4 text-show text-justify">
+  <%= @post.review %>
+</p>
+<p class="mx-auto mt-4 text-show text-justify">
+  <%= link_to 'Back', categories_path %>
+</p>
