--- a/app/views/posts/_categories.html.erb
+++ b/app/views/posts/_categories.html.erb
@@ -1,4 +1,6 @@
-<div class="container-fluid ">
+<%
+=begin%>
+ <div class="container-fluid ">
   <div class="card my-3 py-5 mb-5 px-5">
     <div class="my-3 pt-3 px-5">
       <% @posts.each do |post| %>
@@ -20,4 +22,44 @@
       <% end %>
     </div>
   </div>
-</div>
+</div> 
+<%
+=end%>
+
+
+
+
+
+
+
+
+
+<h1>Posts</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Text</th>
+      <th>Author</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td><%= post.text %></td>
+        <td><%= post.author_id %></td>
+        <td><%= link_to 'Show', post %></td>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'Create a New Post', new_post_path %>
