--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -46,20 +46,20 @@
 
 
 
-<main class="container-fluid p-0">
+<div class="container">
 	<div class="row">
 		<%= most_voted_partial %>
 		<% @categories.each do |category| %>
-			<div class= "col-3 p-0 category-image" style="background-image: url(<%= last_post_image(category) %>)">
+			<div class="col-3 p-0" style="background-image: url(<%= last_post_image(category) %>)">
 				<div class="cover-img d-flex flex-column justify-content-between">
 					<div>
-						<%= link_to "#{category.name}", category_path(category), :class => "text-uppercase post-title header-effect"%>
+						<%= link_to "#{category.name}", category_path(category), :class => "text-uppercase"%>
 						<span class= "effect"></span>
 					</div>
-					<p class= "text-right post-title text-white" ><%= last_post_title(category) %></p>
+					<p class= "text-right text-white" ><%= last_post_title(category) %></p>
 				</div>
 			</div>
 		<% end %>
 		</div>
 	</div>
-</main>
+</div>
