--- a/app/views/home/_carrousel.html.erb
+++ b/app/views/home/_carrousel.html.erb
@@ -41,10 +41,10 @@
 
 
 
-<div class="first-row main-article col-12 p-0" style="background-image: url(<%= (url_for(most_voted_partial.image)) %>)">
+<div class="first-row main-posts col-12 p-0" style="background-image: url(<%= (url_for(most_voted_partial.image)) %>)">
     <div class="cover-gradient p-4 d-flex flex-column justify-content-end">
         <p class="main-title text_orange text-right text-uppercase"> <%= @most_voted.title %> </p> 
-        <p class = "article_text text-right text-white"> <%= truncate("#{@most_voted.text}", :length => 135) %> </p>
+        <p class = "posts_text text-right text-white"> <%= truncate("#{@most_voted.text}", :length => 135) %> </p>
     </div>
 </div>
 
