--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,25 @@
 
 <div class="form-wrapper">
-  <%= form_with(model: article, local: true) do |form| %>
-    <% if article.errors.any? %>
+  <%= form_with(model: post, local: true) do |form| %>
+    <% if post.errors.any? %>
       <div id="error_explanation">
-        <p><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</p>
+        <p><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</p>
 
         <ul>
-          <% article.errors.full_messages.each do |message| %>
+          <% post.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
       </div>
     <% end %>
 
-    <div class="field">
-      <%= form.label :title %><br>
+    <div class="field mt-5">
+      <%= form.label :title, class:'bold' %><br>
       <%= form.text_field :title %>
     </div>
-
-    <div class="field">
-      <%= form.label :image %><br>
-      <%= form.file_field :image, direct_upload: true %>
-    </div>
     
-    <div class="field">
-      <%= form.label "Categories" %><br>
+    <div class="field mt-3">
+      <%= form.label "Categories", class:'bold' %><br>
       <% @categories.each do |c| %>
         <span class="mr-2">
           <%= form.check_box("categories_list", {:multiple => true}, c.id, nil) %>
@@ -32,16 +27,19 @@
         </span>
       <% end %>
     </div>
-
-    <p><%= link_to "CREATE NEW CATEGORY", new_category_path, :class => "pr-2 navbar-links", target: :_blank %> </p>
-
-
+    <br>
+    <span class="">Do you don't found a Category? <br><%= link_to "Create a new Category", new_category_path, :class => "pl-1 font-italic", target: :_blank %> </span>
     <div class="field">
-      <%= form.label :text %><br>
+      <%= form.label "Write a Review", class:'mt-4 bold' %><br>
       <%= form.text_area(:text, cols: 60, rows: 9) %>
     </div>
 
-    <div class="actions mb-5">
+    <div class="field card">
+      <%= form.label "Pick an Image: ", class:'bold mt-2 pl-4' %><br>
+      <%= form.file_field :image, direct_upload: true, class: 'btn' %>
+    </div>
+
+    <div class="actions mb-5 mt-5">
       <%= form.submit %>
     </div>
   <% end %>
