--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,11 @@
-<div class="container-fluid px-0 pb-2"> 
+<%
+=begin%>
+ <div class="container-fluid px-0 pb-2"> 
   <div class="container pb-3"> 
     <%= render 'posts/search_by', class: 'container' %>
-  </div>
+  </div> 
+<%
+=end%>
   <div class="container pb-3">  
     <%= render 'posts/categories', class:'pb-3' %> 
   </div> 
