Add style to category images in the home page.

--- a/app/views/application/_main.html.erb
+++ b/app/views/application/_main.html.erb
@@ -1,6 +1,1 @@
-<div class="first-row main-post col-12 p-0" style="background-image: url(<%= image_url('default.jpg') %>)">
-    <div class="cover-gradient p-4 d-flex flex-column justify-content-end">
-        <p class="main-title text_orange text-right text-uppercase"> Write an Post </p> 
-        <p class = "post_text text-right text-white"> "Do you wanna publish amazing Posts on our magazine? Please create a new post" </p>
-    </div>
-</div>
+<img class="img-fluid w-100 divs imgc" src="https://images.pexels.com/photos/1181671/pexels-photo-1181671.jpeg" width="100vw" height="625" alt="First slide">
