--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,54 +17,120 @@
 @import "actiontext.scss";
 @import "categories.scss";
 @import "posts.scss";
-
 body {
-  background-color: #4e443e;
+    background-color: #4e443e;
 }
 
 footer {
-  background-color: #1a1f24;
-  position: fixed;
-  margin-top: 50px;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  z-index: 100;
+    background-color: #1a1f24;
+    position: fixed;
+    margin-top: 0px;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 100;
+    margin-top: 50px;
 }
 
 a,
 .head {
-  color: #fd6000;
-  text-decoration: none;
+    color: #fd6000;
+    text-decoration-line: none;
 }
 
 .txt,
 .time {
-  color: #fd6000;
+    color: #fd6000;
 }
 
 .btnc {
-  border-radius: 8px;
-  padding: 12px 16px;
-  font-size: 16px;
-  color: #fff;
-  background-color: #fd6000;
-  text-decoration: none;
+    border-radius: 8px;
+    padding: 12px 16px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #fd6000;
+    text-decoration: none;
 }
 
 .imgc {
-  height: 641px;
+    height: 641px;
 }
 
 .imgc1 {
-  height: 500px;
+    height: 500px;
 }
 
 .divs {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .img {
-  height: 448px;
-  width: 270px;
+    height: 448px;
+    width: 310px;
+    opacity: 0.8;
+    margin-bottom: 60px;
+}
+
+.cover-img {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 50%);
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+}
+
+.cover-gradient {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 50%);
+    width: 100%;
+    height: 100%;
+}
+
+.txt-name {
+    position: relative;
+    top: 380px;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: 2px;
+    left: 70px;
+}
+
+.efx {
+    display: block;
+    width: 30px;
+    height: 1px;
+    border-bottom: 2px solid #f9e83d;
+}
+
+.effect-orange {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #f96338;
+}
+
+.effect-orange {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #f96338;
+}
+
+a:hover {
+    text-decoration-line: none;
+    color: rgb(255, 255, 255);
+}
+
+.btnc:hover {
+    border-radius: 8px;
+    padding: 12px 16px;
+    font-size: 16px;
+    color: #000;
+    background-color: #fff;
+    text-decoration: none;
+    transition: width 1.5s;
+}
+
+.efx:hover,
+.effect-orange:hover {
+    width: 75px;
+    transition: width 0.4s;
 }
