Add style to bookmark index page.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
             <% if current_user %>
               <%= link_to "Create New Post", new_post_path, class: "dropdown-item" %>
               <%= link_to "Create New Category", new_category_path, class: "dropdown-item" %>
-              <%= link_to "Manage Categories", categories_path, class: "dropdown-item" %>
+              <%= link_to "Bookmarks", bookmarks_path, class: "dropdown-item" %>
             <% end %>
             <%= link_to "Account Settings", edit_user_registration_path, class: "dropdown-item" %>
             <div class="dropdown-divider"></div>
