--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -51,7 +51,7 @@
 						<%= link_to "#{category.name}", category_path(category), :class => "bold  ml-2 mt-2 text-uppercase"%>
 						<div class="efx"></div>
 					</div>
-					<p class= "txt-name" ><%= last_post_title(category) %></p>
+					<a class= "txt-name" ><%= last_post_title(category) %></a>
 				</div>
 			</div>
 		<% end %>
