--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@ a,
 }
 
 .img {
-    height: 448px;
+    height: auto;
     width: 310px;
     opacity: 0.8;
     margin-bottom: 60px;
@@ -97,7 +97,7 @@ a,
     display: block;
     width: 30px;
     height: 1px;
-    border-bottom: 2px solid #f9e83d;
+    border-bottom: 6px solid #f9e83d;
 }
 
 .effect-orange {
