--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+
+<div class="container bg-white">
 	<% @bookmarks.each_with_index do |bookmark, i| %>
 	  <div class = "col-6 row p-0">
 	    <div class="col-6 image-square order-2 p-0" style="background-image: url(<%= url_for(bookmark.post.image) %>)">
@@ -16,4 +17,3 @@
 	  </div>
 	<% end %>
 </div>
-
