--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,28 +60,9 @@ a,
     height: 500px;
 }
 
-.divs {
-    opacity: 0.5;
-}
-
 .img {
-    height: auto;
-    width: 310px;
-    opacity: 0.8;
-    margin-bottom: 60px;
-}
-
-.cover-img {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 50%);
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-}
-
-.cover-gradient {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 50%);
-    width: 100%;
-    height: 100%;
+    height: 490px;
+    width: 360px;
 }
 
 .txt-name {
