--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -42,19 +42,21 @@
 
 
 <div class="container-fluid">
-	<div class="row">
-		
-		<% @categories.each do |category| %>
-			<div class="img p-0" style="background-image: url(<%= last_post_image(category) %>)">
-				<div class="img-fluid d-flex flex-column justify-content-between">
-					<div>
-						<%= link_to "#{category.name}", category_path(category), :class => "bold  ml-2 mt-2 text-uppercase"%>
-						<div class="efx"></div>
-					</div>
-					<a class= "txt-name" ><%= last_post_title(category) %></a>
-				</div>
-			</div>
-		<% end %>
-		</div>
+	<div class="container-fluid px-0">
+    <div class="row">
+      <% @categories.each do |category| %>
+        <div class="px-0">
+          <%= image_tag last_post_image(category), class:'img px-0' %>
+          <div class="img-fluid d-flex flex-column justify-content-between">
+            <div>
+              <%= link_to "#{category.name}", category_path(category), :class => "bold  ml-2 mt-2 text-uppercase"%>
+              <div class="efx"></div>
+            </div>
+            <a class="" ><%= last_post_title(category) %></a>
+          </div>
+        </div>
+      <% end %>
+      </div>
+    </div>
 	</div>
 </div>
