Add style to most_liked image.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,12 @@ a,
     width: 360px;
 }
 
+.img1 {
+    height: 641px;
+    width: 100%;
+    opacity: ;
+}
+
 .txt-name {
     position: relative;
     top: 380px;
