--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,29 +1,29 @@
-<div class="row">
-	<% @posts.each_with_index do |post, i| %>
-	  <div class = "col-6 row p-0">
-	    <div class="img" style="background-image: url(<%= url_for(post.image) %>)">
-	    	<div class="cover-img p-0">
-	    	</div>
-	    </div>
-	    <div class ="d-flex flex-column col-6 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
-	    	<div class="">
-		    	<%= link_to "#{@category.name}", category_path(@category), :class => "text-uppercase text_orange header-effect category-name"%>
-		    	<span class= "effect-orange mb-3"></span>
-		    	<p class=""><%= post.title %></p>
-				<p><%= truncate("#{post.text}", :length => 120) %></p>
+<div class="container-fluid">
+	<div class="row">
+		<% @posts.each_with_index do |post, i| %>
+			<div class="mx-0 px-0">
+				<%= image_tag post.image, class:'img-nail mr-0 pr-0' %>
+			</div>
+			<div class="col-6 p-0">
+				<div class="d-flex flex-column col-6 <%= order(i) %> pb-3 px-0 py-0 justify-content-between">
+					<div class="bg-white px-3 pt-3">
+						<%= link_to "#{@category.name}", category_path(@category), :class => "text-uppercase bold"%>
+						<span class="effect-orange mb-3"></span>
+						<a class="text-black pt-3" href="<%= post_path %>"><%= post.title %></a>
 
-	    	</div>
-			<div>
-				<p class="text-right"><strong> <%= post.author.username %></strong></p>
-				<p class="text-right">
-					<span class="mr-2"><%= vote_button(post) %></span>
-					<%= bookmark_button(post) %>
-	    		</p>
-	    	</div>
-
-		</div>
-	  </div>
-	<% end %>
+						<p><%= truncate("#{post.text}", :length => 120) %></p>
+						<a href="<%= post_path %>">See more</a>
+					</div>
+				<div class="bg-white px-3">
+					<p class="text-right"><strong> <%= post.author.username %></strong></p>
+					<p class="text-right">
+						<span class="mr-2"><%= vote_button(post) %></span>
+						<%= bookmark_button(post) %>
+						</p>
+				</div>
+			</div>
+		<% end %>
+	</div>
 </div>
 
 
