--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,11 +13,10 @@ body {
 
 footer {
     background-color: #1a1f24;
-    position: fixed;
     margin-top: 0px;
     bottom: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 100;
     margin-top: 30px;
 }
@@ -52,23 +51,18 @@ a,
 }
 
 .ttl-txt {
-    margin-top: -40px;
     position: relative;
-    top: 30px;
-    left: 15px;
+    bottom: 480px;
+    border-bottom: 5px solid #ffffff;
+    left: 25px;
     font-weight: bold;
     z-index: 1;
+    width: 100px;
 }
 
 .txt-name {
     position: fixed;
     z-index: 1;
-}
-
-.efx {
-    display: block;
-    width: 30px;
-    height: 1px;
 }
 
 .imgc1 {
@@ -77,7 +71,7 @@ a,
 
 .img {
     height: 490px;
-    width: 360px;
+    width: 335px;
 }
 
 .img1 {
@@ -120,8 +114,7 @@ a:hover {
     transition: width 1.5s;
 }
 
-.efx:hover,
-.effect-orange:hover {
+.efx:hover {
     width: 75px;
     transition: width 0.4s;
 }
