--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,11 @@
-
 <div class="container-fluid">
   <div class="container-fluid d-flex px-0">
     <%= image_tag(@post.image, class:'img') %>
     <div class="px-5 py-3 bg-white">
       <h2><%= @post.title %></h2>
-      <%= @post.text %>
+      <div class="container w-100">
+        <%= @post.text %>
+      </div>
     </div>
   </div>
   <div class="mx-auto mt-4 text-show text-justify">
