Fixed styles to the main page.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<div class="container-fluid d-flex mx-0 px-0">
+<div class="container-fluid d-flex mx-0 px-0 mb-4">
   <% @categories.each do |category| %>
     <div class="row px-0 mx-0 px-0">
       <%= image_tag last_post_image(category), class:'w-100 img' %>
