--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,19 +1,17 @@
 
-<div class="container bg-white">
+<div class="container mb-5">
 	<% @bookmarks.each_with_index do |bookmark, i| %>
-	  <div class = "col-6 row p-0">
-	    <div class="col-6 img-fluid p-0" style="background-image: url(<%= url_for(bookmark.post.image) %>)">
-	    	<div class="cover-img p-0">
-	    	</div>
-	    </div>
-	    <div class ="d-flex flex-column col-6 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
-	    	<div>
-		    	<p class="post-title-show"><%= bookmark.post.title %></p>
-				<p><%= truncate("#{bookmark.post.text}", :length => 185) %></p>
-				
-	    	</div>
-
+		<div class = "col-6 row p-0">
+					<div class="col-6 img-fluid p-0">
+						<%= url_for(post.image) %>
+					</div>
+				<div class ="bg-white d-flex flex-column col-6 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
+					<div>
+						<p class="post-title-show"><%= bookmark.post.title %></p>
+						<p><%= truncate("#{bookmark.post.text}", :length => 105) %></p>
+					</div>
+			</div>
 		</div>
-	  </div>
 	<% end %>
+
 </div>
