--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,23 +1,23 @@
-<% @posts.each_with_index do |post, i| %>
-		<div class="row mx-0 px-0">
-			<div class="col-3 mx-0 px-0">
+<div class="container-fluid">
+	<div class="row">
+		<% @posts.each_with_index do |post, i| %>
+			<div class="col-6 row px-0 mx-0">
 				<%= image_tag post.image, class:'img-fluid mx-0 px-0' %>
-			</div>
-			<div class="col-3 bg-white d-flex flex-column text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
-				<div class="article-text mt-4">
-					<%= link_to "#{@category.name}", category_path(@category), :class => "text-uppercase text_orange header-effect category-name"%>
-					<span class= "effect-orange mb-3"></span>
-
-					<a class="text-black pt-3 article-title-show pt-3 bold" href="<%= post_path %>"><%= post.title %></a>
-					<p><%= truncate("#{post.text}", :length => 120) %></p>
-					<a href="<%= post_path %>">See more</a>
+				<div class="bg-white d-flex flex-column col-6 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
+					<div class="px-4">
+						<%= link_to "#{@category.name}", category_path(@category), :class => "text-uppercase bold"%>
+						<span class="effect-orange mb-3"></span>
+						<a class="text-black pt-3 article-title-show pt-3 bold" href="<%= post_path %>"><%= post.title %></a>
+						<p><%= truncate("#{post.text}", :length => 120) %></p>
+						<a class="font-italic" href="<%= post_path %>">See more</a>
+					</div>
+					<div class="pr-4">
+						<p class="text-right font-italic">Created by: <strong> <%= post.author.username %></strong></p>
+						<p class="text-right">
+							<span class="mr-2"><%= vote_button(post) %></span><%= bookmark_button(post) %></p>
+					</div>
 				</div>
-				<div class="bg-white">
-					<p class="text-right pr-4"> Created By: <strong> <%= post.author.username %></strong></p>
-					<p class="text-right pr-4"> <span class="mr-2"><%= vote_button(post) %></span> <%= bookmark_button(post) %></p>
-				</div>
 			</div>
-		</div>
-<% end %>
-
-
+		<% end %>
+	</div>
+</div>
