--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,19 +1,25 @@
 <div class="container bg-white">
 	<h3 class="bold py-5 text-center">My Bookmarks</h3>
 </div>
-<div class="container mb-3 pt-5 pl-5 rounded">
-	<% @bookmarks.each_with_index do |bookmark, i| %>
-		<div class = "col-12 mb-3 row p-0">
-			<div class="col-3 img-fluid" style="background-image: url(<%= url_for(bookmark.post.image) %>)">
-				<div class="cover-img p-0">
+
+<div class="container-fluid mb-5">
+	<div class="row d-flex justify-content-center">
+		<% @bookmarks.each_with_index do |bookmark, i, post| %>
+
+		<div class="card mx-1 border-0" style="width: 18rem;">
+			<div class="">
+				<div class="col-12 img" style="background-image: url(<%= url_for(bookmark.post.image) %>)">
 				</div>
 			</div>
-				<div class ="bg-white d-flex flex-column col-6 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
-					<div>
-						<h3 class="post-title-show"><%= bookmark.post.title %></h3>
-						<p><%= truncate("#{bookmark.post.text}", :length => 105) %></p>
-					</div>
+			<div class="">
+				<div class="card-body bg-white d-flex flex-column col-12 text-square <%= order(i) %> px-3 pb-3 pt-1 justify-content-between">
+					<h4 class="bold"><%= bookmark.post.title %></h4>
+					<p><%= truncate("#{bookmark.post.text}", :length => 105) %></p>
+					<a href="#" class="btn btn-primary">See Post</a>
+				</div>	
 			</div>
 		</div>
-	<% end %>
+		
+		<% end %>
+	</div>
 </div>
