Add Rspec to the project

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -18,7 +18,7 @@
           <div>
           <p class="text-right">Created by:<strong> <%= post.author.username %></strong></p>
           <p class="text-right">
-            <span class="mr-2"><%= vote_button(post) %></span>
+            <span class="mx-3"><%= vote_button(post) %></span>
             <%= bookmark_button(post) %>
             </p>
           </div>
