--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,15 @@
         <li class="nav-item">
           <%= link_to "Home", root_path, class: "nav-link active bold home" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Homebrew", categories_path, class: "nav-link bold" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Programming", categories_path, class: "nav-link bold" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Horror", categories_path, class: "nav-link bold" %>
+        </li>
 
       </ul>
 
