--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,115 +7,108 @@
 @import "actiontext.scss";
 @import "categories.scss";
 @import "posts.scss";
+
 body {
-    background-color: #4e443e;
+  background-color: #4e443e;
 }
 
 footer {
-    position: fixed;
-    background-color: #1a1f24;
-    margin-top: 0px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-    margin-top: 30px;
+  position: sticky;
+  background-color: #1a1f24;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+  margin-top: 60px;
 }
 
 img {
-    opacity: .6;
-    z-index: -10;
+  opacity: 0.6;
+  z-index: -10;
 }
 
 a,
 .head {
-    color: #fd6000;
-    text-decoration-line: none;
+  color: #fd6000;
+  text-decoration-line: none;
 }
 
 .txt,
 .time {
-    color: #fd6000;
+  color: #fd6000;
 }
 
 .btnc {
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #fd6000;
-    text-decoration: none;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #fd6000;
+  text-decoration: none;
 }
 
 .imgc {
-    height: 641px;
+  height: 641px;
 }
 
 .ttl-txt {
-    position: relative;
-    bottom: 480px;
-    border-bottom: 5px solid #ffffff;
-    left: 25px;
-    font-weight: bold;
-    z-index: 1;
-    width: 100px;
+  position: relative;
+  bottom: 480px;
+  border-bottom: 5px solid #fff;
+  left: 25px;
+  font-weight: bold;
+  z-index: 1;
+  width: 100px;
 }
 
 .txt-name {
-    position: fixed;
-    z-index: 1;
+  position: fixed;
+  z-index: 1;
 }
 
 .imgc1 {
-    height: 500px;
+  height: 500px;
 }
 
 .img {
-    height: 490px;
-    width: 335px;
+  height: 490px;
+  width: 335px;
 }
 
 .img1 {
-    height: 641px;
-    width: 100%;
-    opacity: .6;
+  height: 641px;
+  width: 100%;
+  opacity: 0.6;
 }
 
 .img-nail {
-    height: 325px;
-    width: 240px;
+  height: 325px;
+  width: 240px;
 }
 
 .effect-orange {
-    display: block;
-    width: 30px;
-    height: 2px;
-    background-color: #f96338;
-}
-
-.effect-orange {
-    display: block;
-    width: 30px;
-    height: 2px;
-    background-color: #f96338;
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: #f96338;
 }
 
 a:hover {
-    text-decoration-line: none;
-    color: rgb(255, 255, 255);
+  text-decoration-line: none;
+  color: rgb(255, 255, 255);
 }
 
 .btnc:hover {
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 16px;
-    color: #000;
-    background-color: #fff;
-    text-decoration: none;
-    transition: width 1.5s;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 16px;
+  color: #000;
+  background-color: #fff;
+  text-decoration: none;
+  transition: width 1.5s;
 }
 
 .efx:hover {
-    width: 75px;
-    transition: width 0.4s;
+  width: 75px;
+  transition: width 0.4s;
 }
