--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,13 +10,13 @@
           <%= link_to "Home", root_path, class: "nav-link active bold home" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Homebrew", categories_path, class: "nav-link bold" %>
+          <a class="nav-link bold" href="https://thebookshelve.herokuapp.com/categories/5"> Homebrew </a>
         </li>
         <li class="nav-item">
-          <%= link_to "Programming", categories_path, class: "nav-link bold" %>
+          <a class="nav-link bold" href="https://thebookshelve.herokuapp.com/categories/1"> Programming </a>
         </li>
         <li class="nav-item">
-          <%= link_to "Horror", categories_path, class: "nav-link bold" %>
+          <a class="nav-link bold" href="https://thebookshelve.herokuapp.com/categories/2"> Horror </a>
         </li>
 
       </ul>
