--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container bg-secondary">
-  <div class="bg-secondary">
+<div class="container bg-secondary mb-3">
+  <div class="bg-secondary mb-3">
     <div class="container bg-white rounded">
         <div class="container">
           <div class="container">
@@ -7,9 +7,6 @@
               <h1 class="bold ml-4 pl-3 display-4">New Post</h1>
             </div>
             <%= render 'form', post: @post %>
-            <div class="container ml-5 pb-5">
-              <%= link_to 'Back', posts_path, class: 'btn btn-warning ml-4'%>
-            </div>
           </div>
         </div>
     </div>
